--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <Button
         android:layout_width="match_parent"
-        android:text="发送自定义广播"
-        android:onClick="sendBroadcast"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:onClick="sendOrderBroadcast"
+        android:text="@string/send_broadcast" />
 
 </LinearLayout>
