--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,24 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/btnSendGlobalBroadcast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="sendOrderBroadcast"
-        android:text="@string/send_broadcast" />
+        android:onClick="onClick"
+        android:text="发送全局广播" />
+
+    <Button
+        android:id="@+id/btnSendLocalBroadcast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="发送本地广播" />
+
+    <Button
+        android:id="@+id/btnSendOrderBroadcast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="发送有序广播" />
 
 </LinearLayout>
