--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,20 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/btnWait"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="模拟等待锁" />
+
+    <Button
+        android:id="@+id/btnCompute"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="模拟耗时的计算" />
+
+    <Button
         android:id="@+id/btnSendGlobalBroadcast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
